se agregaron completaron tarjetas

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="galeria">
             <article class="oferta">
                 <div class="tarjeta__oferta">
-                    <img src="./herramientas/img/torta-oreo.jpg" alt="" class="tarjeta__oferta--img">
-                    <h2><a href="">Barritas de leche condensada vegana y chocolate con tortilla de chocolate</a></h2>
-                    <p class="tarjeta__precio--oferta">$4.400</p>
-                    <a href="" class="oferta__btn"><p class="btn">Pedilo YA!!</p></a>
+                    <img src="./herramientas/img/cocina/Pollo-al-verdeo_1400.jpg" alt="Pollo al verdeo" class="tarjeta__oferta--img">
+                    <h2><a href="./pages/page-four.html">Pollo al verdeo</a></h2>
+                    <p class="tarjeta__precio--oferta">$1.400</p>
+                    <a href="./pages/page-four.html" class="oferta__btn"><p class="btn">Pedilo YA!!</p></a>
                 </div>
             </article>
         </div>
@@ -65,35 +65,35 @@
             <h2>Cocina Destacada</h2>
             <div class="galeria">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/cocina/bife-chori-horno_1600.jpg" alt="Bife de chorizo al horno"></div>
+                    <p class="tarjeta__precio">$1600</p>
+                    <h2>Bife de chorizo al horno</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/cocina/canelones-pollo_1400.jpg" alt="canelones de pollo"></div>
+                    <p class="tarjeta__precio">$1400</p>
+                    <h2>canelones de pollo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/cocina-veg/calabacin-relleno-1100.jpg" alt="calabacin relleno"></div>
+                    <p class="tarjeta__precio">$1100</p>
+                    <h2>calabacin relleno vegano</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/cocina-veg/berengenas-en-tempura-1200.jpg" alt="berengenas en tempura"></div>
+                    <p class="tarjeta__precio">$1200</p>
+                    <h2>Berengenas en tempura</h2>
                 </div></a>
                 </article>
                 
@@ -103,35 +103,35 @@
             <h2>Pastelería Destacada</h2>
             <div class="galeria">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/pasteleria/brownie-clasico_3400.jpg" alt="brownie clasico"></div>
+                    <p class="tarjeta__precio">$3400</p>
+                    <h2>Brownie clasico</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/pasteleria/brownie-oreo_4400.jpg" alt="brownie de oreo"></div>
+                    <p class="tarjeta__precio">$4400</p>
+                    <h2>Brownie de oreo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/pasteleria-veg/pastel-moras-veg_5800.jpg" alt="pastel de moras vegano"></div>
+                    <p class="tarjeta__precio">$5800</p>
+                    <h2>Pastel de moras Vegano</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="./herramientas/img/pasteleria-veg/tarta-fresa-veg_5500.jpg" alt="tarta de fresa vegano"></div>
+                    <p class="tarjeta__precio">$5500</p>
+                    <h2>Tarta de fresa vegano</h2>
                 </div></a>
                 </article>
         </section>
@@ -143,25 +143,25 @@
                 <h3>Redes</h3>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="http://www.instagram.com" target="_blank">
                             <i class="bi bi-instagram"></i>
                             <p class="p-redes">Instagram</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://ar.linkedin.com" target="_blank">
                             <i class="bi bi-linkedin"></i>
                             <p class="p-redes">Linkedin</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.facebook.com" target="_blank">
                             <i class="bi bi-facebook"></i>
                             <p class="p-redes">Facebook</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.tiktok.com" target="_blank">
                             <i class="bi bi-tiktok"></i>
                             <p class="p-redes">Tik Tok</p>
                         </a>
