--- a/pages/page-four.html
+++ b/pages/page-four.html
@@ -108,25 +108,25 @@
                 <h3>Redes</h3>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="http://www.instagram.com" target="_blank">
                             <i class="bi bi-instagram"></i>
                             <p class="p-redes">Instagram</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://ar.linkedin.com" target="_blank">
                             <i class="bi bi-linkedin"></i>
                             <p class="p-redes">Linkedin</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.facebook.com" target="_blank">
                             <i class="bi bi-facebook"></i>
                             <p class="p-redes">Facebook</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.tiktok.com" target="_blank">
                             <i class="bi bi-tiktok"></i>
                             <p class="p-redes">Tik Tok</p>
                         </a>
