--- a/pages/page-one.html
+++ b/pages/page-one.html
@@ -48,91 +48,59 @@
             <h2>Nuestros platos</h2>
             <div class="scroll">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/bife-chori-horno_1600.jpg" alt="bife de chorizo al horno"></div>
+                    <p class="tarjeta__precio">$1600</p>
+                    <h2>Bife de chorizo al horno</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/canelones-pollo_1400.jpg" alt="canelones de pollo"></div>
+                    <p class="tarjeta__precio">$1400</p>
+                    <h2>Canelones de pollo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/chorizo-pomarola-1500.jpg" alt="chorizo a la pomarola"></div>
+                    <p class="tarjeta__precio">$1500</p>
+                    <h2>Chorizo a la pomarola</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/milanesa-carne-pollo_1400.jpg" alt="milanesa de carne/pollo"></div>
+                    <p class="tarjeta__precio">$1400</p>
+                    <h2>Mlanesa de carne/pollo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/Pollo-al-verdeo_1400.jpg" alt="Pollo al verdeo"></div>
+                    <p class="tarjeta__precio">$1400</p>
+                    <h2>Pollo al verdeo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/pollo-ala-cazadora.jpg" alt="pollo a la cazadora"></div>
+                    <p class="tarjeta__precio">$1500</p>
+                    <h2>Pollo a la cazadora</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/pollo-portuguesa_1300.jpg" alt="pollo a la portuguesa"></div>
+                    <p class="tarjeta__precio">$1300</p>
+                    <h2>Pollo a la portuguesa</h2>
                 </div></a>
                 </article>
         </section>
@@ -140,102 +108,55 @@
             <h2>Platos Veganos</h2>
             <div class="scroll">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/arroz-frito-verduras-1000.jpg" alt="arroz frito de verduras"></div>
+                    <p class="tarjeta__precio">$1000</p>
+                    <h2>Arroz frito de verduras</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/berengenas-en-tempura-1200.jpg" alt="berengenas en tempura"></div>
+                    <p class="tarjeta__precio">$1200</p>
+                    <h2>Berengenas en tempura</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/calabacin-relleno-1100.jpg" alt="calabacin relleno"></div>
+                    <p class="tarjeta__precio">$1100</p>
+                    <h2>Calabacin Relleno</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/Focaccia-aceitunas-y-tomates-1300.jpg" alt="Focaccia de aceitas y tomate"></div>
+                    <p class="tarjeta__precio">$1300</p>
+                    <h2>Focaccia de aceitunas y tomate</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/montaditos-de-tofu-1100.jpg" alt="montaditos de tofu"></div>
+                    <p class="tarjeta__precio">$1100</p>
+                    <h2>Montaditos de tofu</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina-veg/potaje-de-garbanzos-1200.jpg" alt="potaje de garbanzos"></div>
+                    <p class="tarjeta__precio">$1200</p>
+                    <h2>Potaje de garbanzos</h2>
                 </div></a>
                 </article>
         </section>
-
-
-
-
-
     </main>
-
-
     <footer>
         <hr>
         <div class="footer__info">
@@ -243,25 +164,25 @@
                 <h3>Redes</h3>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="http://www.instagram.com" target="_blank">
                             <i class="bi bi-instagram"></i>
                             <p class="p-redes">Instagram</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://ar.linkedin.com" target="_blank">
                             <i class="bi bi-linkedin"></i>
                             <p class="p-redes">Linkedin</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.facebook.com" target="_blank">
                             <i class="bi bi-facebook"></i>
                             <p class="p-redes">Facebook</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="https://www.tiktok.com" target="_blank">
                             <i class="bi bi-tiktok"></i>
                             <p class="p-redes">Tik Tok</p>
                         </a>
